--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>Accesos directos</h1>
     <div class="header-actions">
       <button id="themeToggle" class="run-btn" title="Cambiar tema">Tema</button>
+      <div class="update-wrap">
+        <button id="checkUpdates" class="run-btn" title="Verificar actualizaciones">Verificar version</button>
+        <span id="updateStatus" class="update-status">—</span>
+      </div>
       <div class="add-wrap">
         <button id="addBtn" title="Agregar acceso directo">+</button>
         <div id="addMenu" class="add-menu hidden">
